--- a/src/index.css
+++ b/src/index.css
@@ -18,21 +18,32 @@ code {
 
 
 .player_name_form {
-  width: 80%;
+  /* width: 80%; */
+}
+
+.player_name_form div {
+  width: 100%;
+}
+
+.player_name_form .post {
+  width: 100%;
+  margin-left: 30px;
+  margin-top: 15px;
+  padding: 7px;
+  color: black;
+  font-size: 17px;
+  margin-bottom: 30px;
 }
 
 .player_name_input {
   padding: 0;
-  width: 100%;
-  margin-left: 8px !important;
+  margin-left: 30px !important;
 }
 .coment_input {
   padding: 0;
-  width: 100%;
-  margin-left: 8px !important;
+  margin-left: 30px !important;
   margin-top: 15px !important;
 }
-
 .select_platform {
   margin-top: 30px;
   display: flex;
@@ -112,6 +123,22 @@ code {
   width: 30%;
 }
 
+.tag_form {
+  margin-left: 30px;
+  margin-top: 15px;
+}
+
+.tag_form button {
+  color: #3f51b5;
+  padding: 3px;
+  margin: 3px;
+  font-size: 13px;
+}
+
+.tag_form .tag_checked {
+  background-color: #acb6f3;
+}
+
 
 
 
@@ -137,6 +164,7 @@ code {
 
   .select_platform_form {
     display: block !important;
+    width: 95% !important;
   }
 
   .select_platform_form li{
