--- a/src/common.css
+++ b/src/common.css
@@ -57,11 +57,8 @@
 
 .article_flame .comment {
     font-weight: bold;
-}
-
-.article_flame .comment {
-    font-weight: bold;
     margin-top: 5px !important;
+    font-size: 14px !important;
 }
 
 .article_flame p {
@@ -107,6 +104,10 @@
     font-weight: bold;
 }
 
+.delete_icon {
+    cursor: pointer;
+}
+
 .tag_form label {
     display: inline-block;
     cursor: pointer;
@@ -131,15 +132,25 @@
 
 .tag_box {
     padding: 3px;
-    color: #2c2c2f;
-    background: #cde4ff;
+    color: white;
+    background: rgba(245, 0, 87, 0.5);
     display: inline-block;
     border-radius: 6px;
     margin: 3px;
 }
 .tag_box p {
-    font-size: 10px !important;
+    font-size: 11px !important;
     font-weight: bold;
+}
+
+.paper {
+    max-height: 200px;
+    overflow: auto;
+    position: absolute;
+    bottom: -20px;
+    left: -100px;
+    width: 200px;
+    font-size: 15px;
 }
 
 
