--- a/src/common.css
+++ b/src/common.css
@@ -96,7 +96,13 @@
 }
 
 .article_flame .action_form svg {
-    margin-right: 10px;
+    margin-right: 15px;
+    margin-left: 15px;
+}
+
+.article_flame .action_icon_form {
+    display: flex;
+    align-items: center;
 }
 
 .article_flame .action_form button span {
@@ -107,6 +113,11 @@
 .delete_icon {
     cursor: pointer;
 }
+
+.tag_form {
+    margin-left: 30px;
+    margin-top: 10px;
+}  
 
 .tag_form label {
     display: inline-block;
@@ -129,6 +140,16 @@
     border: #527ffb;
 }
 
+.tag_form .platform {
+    color: red !important;
+    border: 1px solid red !important;
+}
+
+.tag_form label input:checked + .platform {
+    background: #f1776e;
+    color: white !important;
+}
+
 
 .tag_box {
     padding: 3px;
@@ -144,13 +165,18 @@
 }
 
 .paper {
-    max-height: 200px;
-    overflow: auto;
+    width: max-content;
+    z-index: 2;
     position: absolute;
-    bottom: -20px;
-    left: -100px;
-    width: 200px;
+    top: 40px;
+    left: -150px;
     font-size: 15px;
+    padding: 10px;
+}
+
+.paper div {
+    margin-bottom: 5px;
+    border-bottom: dotted 1px;
 }
 
 
