--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ code {
 }
 
 .select_platform ul {
-  height: 60px;
+  height: 55px;
   opacity: 0.6;
   background-color: #4e4e4e;
   display: flex;
@@ -255,5 +255,12 @@ code {
   .keyword_search_form input {
     width: 80% !important;
   }
+
+.select_platform_center_form {
+    width: 100% !important;
+}
+.clear_condition {
+    margin-left: 0px !important;
+}
 
 }
