--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,12 @@ code {
   /* width: 80%; */
 }
 
-.player_name_form div {
+.alert_message {
+    margin-left: 30px !important;
+    margin-bottom: 20px !important;
+}
+
+.player_name_form .tag_form {
   width: 100%;
 }
 
@@ -43,8 +48,10 @@ code {
 .player_name_input {
   padding: 0;
   margin-left: 30px !important;
+  width: 100%;
 }
 .coment_input {
+  width: 100%;
   padding: 0;
   margin-left: 30px !important;
   margin-top: 10px !important;
@@ -135,7 +142,7 @@ code {
 }
 
 .select_platform_center_form {
-    width: 95%;
+    width: 90%;
 }
 
 .reply_id {    
@@ -270,6 +277,14 @@ code {
 
 .sort_form {
     width: auto !important;
+}
+
+.reply_id {
+    margin-left: 0px !important;
+}
+
+.alert_message {
+    margin: 0px !important;
 }
 
 }
