--- a/src/common.css
+++ b/src/common.css
@@ -32,7 +32,6 @@
     color: #696969;
     background: #ffffe0;
     border-left: solid 15px #ff8c00;
-    margin-left: 30px;
 }
 
 .article_flame .article_reply {
@@ -116,14 +115,13 @@
 }
 
 .tag_form {
-    margin-left: 30px;
     margin-top: 10px;
 }  
 
 .tag_form label {
     display: inline-block;
     cursor: pointer;
-    margin: 4px;
+    margin: 2px;
 }
 .tag_form label input {
     display: none; /* デフォルトのinputは非表示にする */
@@ -221,5 +219,13 @@
         display: flex;
         justify-content: flex-end;
         float: unset;
+    }
+
+    .tab_button {
+        width: auto !important;
+        padding: 0 5px !important;
+        font-size: 12px !important;
+        font-weight: bold !important;
+        white-space: nowrap !important;
     }
 }
