--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ code {
 }
 
 .alert_message {
-    margin-left: 30px !important;
+    /* margin-left: 30px !important; */
     margin-bottom: 20px !important;
 }
 
@@ -36,7 +36,6 @@ code {
 
 .player_name_form .post {
   width: 100%;
-  margin-left: 30px;
   margin-top: 15px;
   padding: 7px;
   color: white;
@@ -47,13 +46,13 @@ code {
 
 .player_name_input {
   padding: 0;
-  margin-left: 30px !important;
+  /* margin-left: 30px !important; */
   width: 100%;
 }
 .coment_input {
   width: 100%;
   padding: 0;
-  margin-left: 30px !important;
+  /* margin-left: 30px !important; */
   margin-top: 10px !important;
 }
 .select_platform {
@@ -62,9 +61,9 @@ code {
 }
 
 .select_platform .select_platform_form {
-  margin-left: 50px;
+  margin: 0 auto;
   display: flex;
-  width: 80%;
+  width: 95%;
 }
 
 .select_platform .select_platform_form li{
@@ -84,7 +83,7 @@ code {
 }
 
 .select_platform ul {
-  height: 55px;
+  height: 60px;
   opacity: 0.6;
   background-color: #4e4e4e;
   display: flex;
@@ -138,16 +137,22 @@ code {
 }
 
 .select_platform_left_form {
-  width: 35%;
+  width: 30%;
 }
 
 .select_platform_center_form {
+    margin-left: 30px;
     width: 90%;
+}
+
+.select_platform_right_form {
+    width: 30%;
+    margin-left: 30px;
 }
 
 .reply_id {    
     margin-top: 10px !important;
-    margin-left: 30px !important;
+    /* margin-left: 30px !important; */
 }
 
 .reply_id p {
@@ -160,17 +165,6 @@ code {
     margin-left: 5px;
 }
 
-/* .tag_form button {
-  color: #3f51b5;
-  padding: 2px;
-  margin: 2px;
-  font-size: 13px;
-} */
-
-/* .tag_form .tag_checked {
-  background-color: #acb6f3;
-} */
-
 .keyword_search_form input {
     width: 70%;
     margin: 10px;
@@ -181,7 +175,6 @@ code {
 }
 
 .sort_form {
-    margin-left: 30px;
     text-align: right;
 }
 
@@ -242,14 +235,6 @@ code {
 
   .player_name_input {
     margin-top: 15px !important;
-    margin-left: 0 !important;
-  }
-  .coment_input {
-    margin-left: 0 !important;
-  }
-
-  .tag_form {
-    margin-left: 0px !important;
   }
   .tag_form button {
     font-size: 10px !important;
@@ -258,7 +243,6 @@ code {
   }
 
   .player_name_form .post {
-    margin-left: 0px;
     margin-top: 10px;
     margin-bottom: 20px;
     font-size: 13px;
@@ -269,18 +253,12 @@ code {
   }
 
 .select_platform_center_form {
-    width: 100% !important;
-}
-.clear_condition {
     margin-left: 0px !important;
+    width: 100% !important;
 }
 
 .sort_form {
     width: auto !important;
-}
-
-.reply_id {
-    margin-left: 0px !important;
 }
 
 .alert_message {
