--- a/src/parts.css
+++ b/src/parts.css
@@ -1,3 +1,7 @@
+html{
+    scroll-behavior: smooth;
+}
+
 .page_title {
     padding: 15px;
 }
@@ -38,10 +42,14 @@
     padding: 0em 0em 0em 0.5em;
     border-bottom: dashed 1px silver;
     list-style-type: none!important;
-    display: flex;
     cursor: pointer;
-    font-size: 15px;
+    font-size: 16px;
     font-weight: bold;
+}
+
+.table_of_contents ul li a {
+    color: inherit;
+    display: flex;
     align-items: center;
 }
 
@@ -64,6 +72,7 @@
 }
 
 .evaluation_criteria table th {
+    border: 1px solid #e2e2e2;
     font-size: 17px;
     width: auto;
     padding: 10px;
@@ -120,6 +129,7 @@
 }
 
 .new_character table th {
+    border: 1px solid #e2e2e2;
     width: 20% !important;
     font-size: 15px;
     width: auto;
@@ -168,4 +178,20 @@
     font-size: 20px;
     font-weight: bold;
     color: #585858;
+}
+
+.sns_form {
+    color: white;
+    display: flex;
+    align-items: center;
+    font-size: 15px;
+    background-color: #1b95e0;
+    text-decoration: none;
+    padding: 5px;
+}
+
+.latest_info h3 {
+    padding: 10px;
+    background-color: #87b2ff;
+    color: white;
 }
